Text Overflow Resolved

--- a/src/main/resources/META-INF/resources/static/css/chatapp.css
+++ b/src/main/resources/META-INF/resources/static/css/chatapp.css
@@ -576,6 +576,7 @@ body {
   #frame .content .messages ul li.replies p {
     background: #435f7a;
     color: #f5f5f5;
+    overflow: hidden;
   }
   #frame .content .messages ul li.sent img {
     float: right;
@@ -584,6 +585,8 @@ body {
   #frame .content .messages ul li.sent p {
     background: #f5f5f5;
     float: right;
+    overflow: hidden;
+    /* white-space: nowrap; */
   }
   #frame .content .messages ul li img {
     width: 22px;
